Отработать замечания review 1 sprint_6