@@ -1,7 +1,6 @@
 package manager;
 
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import tasks.Epic;
 import tasks.Subtask;
@@ -9,22 +8,28 @@ import tasks.Task;
 
 import java.util.ArrayList;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 
 class InMemoryHistoryManagerTest {
 
-    static Task task1 = new Task("таска 1", "содержание 1");
-    static Epic epic1 = new Epic("эпик 1", "содержание 1");
-    static Subtask subtask1 = new Subtask("сабтаск1.1", "содержание 1");
+    private static Task task1;
+    private static Epic epic1;
+    private static Subtask subtask1;
 
-    HistoryManager history = Managers.getDefaultHistory();
+    private HistoryManager history;
 
-    @BeforeAll
-    static void created() {
-        TaskManager manager = Managers.getDefault();
-        manager.createTask(task1);
-        manager.createEpic(epic1);
-        manager.createSubtask(subtask1, epic1.getId());
+    //переделал логику тестов, было неудобно по прошлой работать с замечаниями
+    @BeforeEach
+    void setUp() {
+        history = Managers.getDefaultHistory(); // Создаю новый экземпляр HistoryManager перед каждым тестом
+        history.getHistory().clear(); // Очистка истории перед каждым тестом
+
+        task1 = new Task("таска 1", "содержание 1");
+        task1.setId(1);
+        epic1 = new Epic("эпик 1", "содержание 1");
+        epic1.setId(2);
+        subtask1 = new Subtask("сабтаск1.1", "содержание 1");
+        subtask1.setId(3);
     }
 
     @Test
@@ -32,7 +37,8 @@ class InMemoryHistoryManagerTest {
         history.add(task1);
         history.add(epic1);
         history.add(subtask1);
-        Assertions.assertNotNull(history.getHistory(), "История не сохраняется.");
+
+        assertNotNull(history.getHistory(), "История не сохраняется.");
         assertEquals(3, history.getHistory().size(), "Количество просмотров не равно количеству в списке просмотров.");
     }
 
@@ -42,14 +48,79 @@ class InMemoryHistoryManagerTest {
     }
 
     @Test
-    public void shouldReturnTrueIfHistoryHaveCorrectOrder() {
+    void shouldReturnTrueIfHistoryHaveCorrectOrder() {
         history.add(task1);
         history.add(epic1);
-        history.add(task1);
+        history.add(task1); // Дубликат
 
-        assertEquals(2, history.getHistory().size(), "История должна содержать 2 задачи без дубликатов.");
-        assertEquals(epic1, history.getHistory().getFirst(), "Первая задача должна быть epic2.");
-        assertEquals(task1, history.getHistory().getLast(), "Вторая задача должна быть task1.");
+        ArrayList<Task> historyList = history.getHistory();
+        assertEquals(2, historyList.size(), "История должна содержать 2 задачи без дубликатов.");
+        assertEquals(epic1, historyList.get(0), "Первая задача должна быть epic1.");
+        assertEquals(task1, historyList.get(1), "Вторая задача должна быть task1.");
     }
 
+    @Test
+    void testAddFirstTask() {
+        history.add(task1);
+
+        ArrayList<Task> historyList = history.getHistory();
+        assertEquals(1, historyList.size(), "В истории должна быть 1 задача.");
+        assertEquals(task1, historyList.get(0), "Первым элементом должна быть task1.");
+    }
+
+    @Test
+    void testAddLastTask() {
+        history.add(epic1);
+        history.add(subtask1);
+        history.add(task1);
+
+        ArrayList<Task> historyList = history.getHistory();
+        assertEquals(task1, historyList.get(historyList.size() - 1), "Последней задачей должна быть task1.");
+    }
+
+    @Test
+    void testRemoveFirstTask() {
+        history.add(task1);
+        history.add(epic1);
+
+        history.remove(1); // Удаляю первую задачу
+
+        ArrayList<Task> historyList = history.getHistory();
+        assertEquals(1, historyList.size(), "В истории должна остаться 1 задача.");
+        assertEquals(epic1, historyList.get(0), "Первой задачей должна быть epic1.");
+    }
+
+    @Test
+    void testRemoveLastTask() { //потратил больше 6 часов, прежде чем понял что в add последняя нода была без привязки
+        history.add(task1);
+        history.add(epic1);
+        history.remove(epic1.getId());
+        // Проверяем, что осталась только одна задача
+        ArrayList<Task> historyList = history.getHistory();
+        assertEquals(1, historyList.size(), "В истории должна остаться 1 задача.");
+        assertEquals(task1, historyList.get(0), "Первая задача должна быть task1.");
+    }
+
+    @Test
+    void testRemoveOnlyTask() {
+        history.add(task1);
+        history.remove(1); // Удаляем единственную задачу
+
+        ArrayList<Task> historyList = history.getHistory();
+        assertTrue(historyList.isEmpty());
+    }
+
+    @Test
+    void testRemoveMiddleTask() {
+        history.add(task1);
+        history.add(subtask1);
+        history.add(epic1);
+
+        history.remove(2); // Удаляем задачу из середины
+
+        ArrayList<Task> historyList = history.getHistory();
+        assertEquals(2, historyList.size());
+        assertEquals(task1, historyList.get(0));
+        assertEquals(epic1, historyList.get(1));
+    }
 }
